deployment/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: ghcr.io/hm-edu/portal-frontend:main
          imagePullPolicy: Always
          name: app
          ports:
          - containerPort: 80
            protocol: TCP
---
