deployment/certificates.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certificates
  namespace: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: certificates
  template:
    metadata:
      annotations:
        proxy.istio.io/config: '{"holdApplicationUntilProxyStarts": true}'
      labels:
        app: certificates
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - image: ghcr.io/hm-edu/certificates:master
          imagePullPolicy: Always
          name: app
          command: [ "/usr/local/bin/step-ca" ]
          ports:
          - containerPort: 443
            protocol: TCP
          volumeMounts:
            - mountPath: /opt/step
              name: cert
            - mountPath: /home/step/config
              name: cert-config
      volumes:
        - name: cert-config
          configMap:
            name: cert-config
            items:
              - key: ca.json
                path: ca.json
        - name: cert
          persistentVolumeClaim:
            claimName: cert-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: portal
  name: certificates
  labels:
    app: certificates
spec:
  type: ClusterIP
  ports:
  - name: acme
    port: 443
    targetPort: 443
  - name: internal
    port: 8443
    targetPort: 8443
  selector:
   app: certificates
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: certificates-mtls
  namespace: portal
spec:
  host: certificates.portal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: acme-gateway
  namespace: portal
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - acme.hmtest.de
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acme
  namespace: portal
spec:
  hosts:
  - acme.hmtest.de
  gateways:
  - acme-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - acme.hmtest.de
    route:
    - destination:
        host: certificates
        port:
          number: 443
