deployment/postgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: portal
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgredb
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
            - mountPath: /docker-entrypoint-initdb.d
              name: postgresinit
      volumes:
        - name: postgresinit
          configMap:
            name: postgres-init
            items:
              - key: docker_postgres_init.sql
                path: docker_postgres_init.sql
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: portal
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
   - port: 5432
     appProtocol: TCP
  selector:
   app: postgres
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: postgres-rest-interface-mtls
  namespace: portal
spec:
  host: postgres.portal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
